_includes/amigavision.css
@font-face {
  font-family: 'Libre Baskerville';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url(/fonts/LibreBaskerville-Regular.woff2) format("woff2");
  unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
}
@font-face {
  font-family: 'Libre Baskerville';
  font-style: italic;
  font-weight: 400;
  font-display: swap;
  src: url(/fonts/LibreBaskerville-Italic.woff2) format("woff2");
  unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
}
@font-face {
  font-family: 'Libre Baskerville';
  font-style: normal;
  font-weight: 700;
  font-display: swap;
  src: url(/fonts/LibreBaskerville-Bold.woff2) format("woff2");
  unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
}
.plans,.contact-box,footer .footer-columns {
  display: -webkit-box;
  display: -webkit-flex;
  display: -moz-flex;
  display: -ms-flexbox;
  display: flex;
}

* {
	cursor: url('/images/amiga-pointer.cur'), auto !important;
}

html {
  background: #2b2b40;
}
html,body {
  margin: 0;
  padding: 0;
}
body {
  font-family: "Libre Baskerville","Baskerville","Times New Roman","Times";
}
header {
  font-family: "San Francisco","Helvetica Neue","Arial";
}
a {
  color: #00a4ca;
  text-decoration: none;
}
a:hover {
  text-decoration: underline;
}
a:focus-visible {
  outline: 2px solid #fff;
  outline-offset: 2px;
}
img {
  width: 100%;
}
h1 strong,h2 strong {
  font-weight: 700;
}
h1 {
  font-weight: 300;
  font-size: 2.3em;
  margin: 0;
}
h2 {
  font-weight: 300;
  font-size: 2.2em;
  margin: 30px 0 0 0;
}
h3 {
  margin: 20px 0 10px 0;
}
h2+h3 {
  margin-top:20px;
}

p,address {
  /* font-size: 1.38em; */
  color: black;
  margin-bottom: 20px;
  font-weight: 300;
  line-height: 1.4em;
}

ul {
  padding-left: 20px
}

ol {
  padding-left: 30px
}

li {
  color: black;
  line-height: 1.4em;
  margin: 0.25em 0;
}

strong, b {
  font-weight: 600;
}

hr {
  color: black;
  margin: 1em auto;
  clear: both;
  font-size: 1.4em;
  text-align: center;
  border: none;
}

hr:after {
  content: "\2042";
}

pre {
  font-family: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace;
  color: black;
  background-color: rgb(239, 241, 242);  
  border-radius: 6px;
  padding: 16px;
  margin: 0 -16px 20px -16px;
	overflow: auto;
}

code {
  font-family: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace;
  padding: .2em .4em;
  font-size: 85%;
  border-radius: 6px;
  background-color: rgb(239, 241, 242);
	overflow: auto;
}

pre code {
  padding: 0;
}

p code, li code, td code {
  white-space: normal;
  overflow-wrap: anywhere;
  word-break: break-word;
}

.bottom-cta {
  background: linear-gradient(to bottom,#4182e4 0%,#4182e4 100%);
  color: #fff;
  text-align: center;
  margin: 0;
  padding: 100px 0;
}
.bottom-cta h2 {
  margin-bottom: 50px;
}
.testimonial {
  background: #f5f5f5;
  margin: 0;
  padding: 100px 0;
}
.testimonial .testimonial-block {
  max-width: 750px;
  width: 98%;
  margin: 0 auto;
}
@media (min-width:450px) {.testimonial .testimonial-block {
    display: -webkit-box;
    display: -webkit-flex;
    display: -moz-flex;
    display: -ms-flexbox;
    display: flex;
  }
  .testimonial .testimonial-block blockquote {
    -webkit-flex: 1;
    flex: 1;
  }
}

.content section:nth-child(odd) {
background-color: #f5f5f5;
}
.hero {
color: #ffffff;
text-align: center;
background: linear-gradient(to bottom,#4182e4 0%,#4182e4 100%) no-repeat #a05fb7;
padding-top: 10px;
}
.hero h1 {
margin-top: 30px;
}
.hero h2 {
font-size: 1em;
}
.hero p {
color: #fff;
}
.hero .text-container h1 {
margin-top: 0;
}
.hero .text-container h2 {
margin-top: 10px;
}
@media (min-width:768px) {.flex {
  display: -webkit-box;
  display: -webkit-flex;
  display: -moz-flex;
  display: -ms-flexbox;
  display: flex;
  align-items: center;
  flex-direction: row;
  }
  .flex .text,.flex .image {
  -webkit-flex: 1;
  flex: 1;
  padding: 0 20px;
  }
  .content section:nth-child(odd) .flex {
  flex-direction: row-reverse;
  }
}

.container,.text-container {
margin: 0 auto;
position: relative;
padding: 0 20px;
}
.text-container {
max-width: 750px;
}
.container {
max-width: 1140px;
}
.container.max-container {
max-width: 100%;
padding: 0;
}
header .container {
display: flex;
flex-direction: column;
align-items: flex-start;
}
header {
color: #fff;
padding: 20px 0;
background: #4182e4;
background: linear-gradient(to bottom,#4182e4 0%,#4182e4 100%) no-repeat #4182e4;
}
header a {
color: #fff;
text-decoration: none;
z-index: 1;
position: relative;
}
header a:hover {
text-decoration: none;
}
header .company-name {
font-size: 1.7em;
line-height: 0;
margin: 18px auto 10px auto;
width: 100%;
text-align: center;
}
header .company-name a {
display: inline-block;
}
header .company-name img {
display: block;
width: auto;
max-width: 100%;
height: 42px;
margin: 0 auto;
}
.content {
background: white;
padding: 0;
position: relative;
}
.screenshot {
max-width: 100%;
height: auto;
display: block;
border-radius: 5px;
margin-left: auto;
margin-right: auto;
position: relative;
}
section {
padding: 80px 0;
}
.subtext {
margin-top: 10px;
text-align: center;
}
.cta {
margin: 60px 0;
}
.page h2 {
text-align: center;
margin-top: 0;
}
.page .container > h2,
.page .container > .subtext {
max-width: 750px;
margin-left: auto;
margin-right: auto;
}
.content section.page {
padding-top: 24px;
}
blockquote {
padding: 18px 25px;
margin: 0;
quotes: "“" "”" "‘" "’";
font-style: italic;
}
blockquote .author {
display: block;
font-weight: bold;
margin: 10px 0 0 0;
font-size: .85em;
font-style: normal;
}
blockquote p {
display: inline;
}
/* ... */

